chore: Add Bootstrap and font stylesheets, update App layout: headline

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+  background-color: #070a0d;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
+
 .App {
-  text-align: center;
+  padding-top: 5%;
+  margin: 0 20% 0 20%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 36px;
+  font-weight: 600;
+  color: #f6f6f6;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-size: 30px;
+  font-style: italic;
+  color: #fff9f6;
+  font-family: "Gambetta", serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h3 {
+  font-size: 24px;
+  font-weight: normal;
+  color: #f6f6f6;
 }
-
-.App-link {
-  color: #61dafb;
+h4 {
+  font-size: 24px;
+  font-style: italic;
+  color: rgba(246, 246, 246, 0.65);
+  opacity: 0.65;
+  font-family: "Gambetta", serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgba(246, 246, 246, 0.65);
 }
