About and experience section

--- a/src/Components/Container/Container.css
+++ b/src/Components/Container/Container.css
@@ -6,7 +6,9 @@
     rgba(4, 4, 4, 0.6) 100%
   ) !important;
   color: white;
-  box-shadow: 0 0 0 0.25px #fff9f6;
+  box-shadow: 0 0 0 0.1px rgba(246, 246, 246, 0.65);
   border-radius: 3px;
-  padding: 24px;
+  padding: 22px;
+  padding-bottom: 14px;
+  margin-bottom: 20px;
 }
