--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ h1 {
   color: #f6f6f6;
 }
 h2 {
-  font-size: 30px;
+  font-size: 22px;
   font-style: italic;
   color: #fff9f6;
   font-family: "Gambetta", serif;
@@ -33,7 +33,11 @@ h4 {
   font-family: "Gambetta", serif;
 }
 p {
-  font-size: 20px;
-  font-weight: lighter;
+  font-size: 16px;
+  font-weight: 300;
   color: rgba(246, 246, 246, 0.65);
+}
+
+html {
+  scroll-behavior: smooth;
 }
