--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@ body {
 .App {
   padding-top: 5%;
   margin: 0 20% 0 20%;
+  @media screen and (max-width: 768px) {
+    margin: 0 5% 0 5%;
+  }
 }
 h1 {
   font-size: 36px;
