--- a/src/Components/Divider/Divider.css
+++ b/src/Components/Divider/Divider.css
@@ -3,5 +3,5 @@
   height: 1px;
   width: 100%;
   background: linear-gradient(to right, black, white, black);
-  margin: 20px 0; /* Adjust the margin as needed */
+  margin: 5% 0;
 }
