--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ body {
     margin: 0 5% 0 5%;
   }
 }
+.parent {
+  height: 4680px;
+  @media screen and (max-width: 768px) {
+    height: 10300px;
+  }
+}
 h1 {
   font-size: 36px;
   font-weight: 600;
